src/objects/ddrive__Constituent__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Business_Phone__c</fullName>
        <label>Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Constituents</relationshipLabel>
        <relationshipName>DD_Constituents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Created_in_DonorDrive_By__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Created in DonorDrive By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Created_in_DonorDrive_Relationship__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Created in DonorDrive - Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Date_Entered__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>DonorDrive Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>DonorDrive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Has_Extranet_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Has Extranet Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Home_Phone__c</fullName>
        <label>Home Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_by_in_DonorDrive__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Last Modified by in DonorDrive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified_in_DonorDrive__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Last Modified in DonorDrive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Mobile_Carrier__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Mobile Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Receive_Texts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Receive Texts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Constituent</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Constituents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>